# wandio

./: .clang-format  .gitignore  .gitlab-ci.yml  AUTHORS  ChangeLog  INSTALL  Makefile.am  README  bintray-upload.sh  bootstrap.sh  configure.ac  debpkg-setup.sh  gitlab-build-rpm.sh  gitlab-build.sh  rpmpkg-build.sh  rpmpkg-setup.sh  run-tests-rpm.sh  run-tests.sh
.github/workflows/: deb-build.yaml  rpm-build.yaml
debian/: autogen.sh  changelog  control  copyright  libwandio1-dev.install  libwandio1.install  rules  wandio1-tools.install  wandio1-tools.manpages
lib/: Makefile.am  curl-helper.c  curl-helper.h  ior-bzip.c  ior-http.c  ior-lzma.c  ior-peek.c  ior-qat.c  ior-stdio.c  ior-swift.c  ior-thread.c  ior-zlib.c  ior-zstd-lz4.c  ior-zstd.c  iow-bzip.c  iow-lz4.c  iow-lzma.c  iow-lzo.c  iow-qat.c  iow-stdio.c  iow-thread.c  iow-zlib.c  iow-zstd.c  jsmn_utils.h  swift-keystone.c  swift-keystone.h  wandio.c  wandio.h  wandio_internal.h
lib/swift-support/: jsmn.c  jsmn_utils.c  keystone.c  keystone.h
rpm/: libwandio1.spec
test/: do-basic-tests.sh
test/files/: big.multistream.txt.bz2  big.txt.bz2  big.txt.lz4  big.txt.xz  big.txt.zst
tools/wandiocat/: Makefile.am  wandiocat.1  wcat.c
