SUBDIRS = lib tools/wandiocat

ACLOCAL_AMFLAGS = -I m4
AUTOMAKE_OPTIONS = 1.9 foreign

.PHONY: docs

bootstrap-clean:
	$(RM) -f Makefile.in aclocal.m4 compile config.* \
		configure depcomp install-sh ltmain.sh missing \
		mkinstalldirs stamp-h.in \
		lib/Makefile.in replace/libreplace.la  replace/Makefile.in
	$(RM) -rf autom4te.cache/
